# data-forge-studio

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  INTEGRATION_MANAGERS.md  LICENSE  MIGRATION_COMPLETE.md  README.md  ROADMAP.md  SHORTCUT_ICON_GUIDE.md  add_orbit_connection.py  check_dbs.py  cli.py  demo_db_diagram.py  find_orbit.py  find_orbit_direct.py  mkdocs.yml  pyproject.toml  run.py  test_theme_system.py  test_tree.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: tests.yml
APP_SOURCE/: .gitattributes  CHANGELOG.md  DataForgeStudio.bat  PROMPT_CREATION_APP.txt  SECURITY.md  check_app_source_db.py  check_old_project.py  check_root_db.py  pyproject.toml  run.py  test_integration.py  test_managers.py
APP_SOURCE/.github/ISSUE_TEMPLATE/: feature_request.md
APP_SOURCE/docs/: ALIGNED_STYLE_GUIDE.md  AUTO_FORMAT_STATUS.md  HELP_VIEWER_GUIDE.md  MENU_REFACTORING_V2.md  MIGRATION_V2.md  PYPROJECT_TOML_GUIDE.md  README.md  SQLITE_NATIVE_SUPPORT.md  SQL_FEATURES_IMPLEMENTATION.md  SQL_FORMAT_STYLES_GUIDE.md  SQL_STYLES_COMPARISON.md  SUMMARY_ALL_FEATURES.md
APP_SOURCE/scripts/: add_demo_queries.py  create_test_structure.py  query_config.py
APP_SOURCE/src/config/: theme_manager.py
APP_SOURCE/src/database/: __init__.py  connections_config.py
APP_SOURCE/src/dataforge_studio/: main.py
APP_SOURCE/src/default_themes/: azure_blue.json  classic_light.json  dark_professional.json
APP_SOURCE/src/scripts/: __init__.py  data_loader.py  file_dispatcher.py
APP_SOURCE/src/ui/: __init__.py  custom_log_panel.py  custom_treeview.py  custom_treeview_panel.py  data_explorer.py  database_manager.md  file_root_manager.py  preferences_dialog.py  queries_manager.py  (+1 more)
APP_SOURCE/tests/: test_aligned_adjustments.py  test_aligned_final.py  test_aligned_new_criteria.py  test_config_database.py  test_data_loader.py  test_file_dispatcher.py  test_format_styles_integration.py  test_gui_access.py  test_help_viewer.py  test_new_features.py  test_save_query.py  test_ui_database_manager.py
_packages/: README_OFFLINE.md  prepare_package.bat
assets/icons/: README.md
docs/: ADMIN_GENERAL_PREFERENCES.md  ALIGNED_STYLE_REDESIGNED.md  AUDIT_EVOLUTION_PLAN.md  AUDIT_PROMPT.md  CONFIG_DB_INFO.md  MIGRATION_V0.6.0.md  NEW_FEATURES_QUERIES_DB.md  PATTERNS.md  PROJECTS_FEATURE.md  QUERIES_MANAGER_IMPROVEMENTS.md  RIGHT_CLICK_MENU.md  ROADMAP_ER_DIAGRAMS.md  SAVE_QUERIES_GUIDE.md  SQL_SYNTAX_COMPLEXITY_ANALYSIS.md  SUMMARY_ALL_FEATURES.md  help_manifest.yaml
docs/manual/: 01-quick-start.md  02-explore-database.md  03-multi-projects.md  04-compare-data.md  05-data-files.md  06-format-queries.md  07-ftp-access.md  08-customize.md  09-reference.md  10-er-diagrams.md  README.md
scripts/: _force_update.bat  audit_icons.py  check_update.py  cleanup_duplicate_roots.py  create_shortcut.py  demo_sql_formatting.py  diagnose_sql_connection.py
src/: __init__.py  constants.py  main.py
src/config/: i18n.py  theme_manager.py  user_preferences.py
src/core/: __init__.py  file_dispatcher.py
src/database/: config_db.py  connections_config.py
src/dataforge_studio/: __init__.py  constants.py  main.py
src/scripts/: README.md
src/ui/: base_view_frame.py  connection_dialog.py  custom_datagridview.py  custom_treeview.py  data_explorer.md  data_explorer.py  data_explorer_backup.py  database_manager.py  file_root_manager.py  getting_started.md  gui.py  help_viewer.py  jobs_manager.py  project_manager.py  projects_management.md  queries_manager.py  rootfolder_manager.py  scripts_manager.py  theme_editor_dialog.py
src/utils/: config.py  icon_loader.py  sql_highlighter.py  update_checker.py
tests/: conftest.py  test_aligned_final_with_adjustments.py  test_aligned_style.py  test_all_4_styles.py  test_cached_config.py  test_config_database.py  test_config_database_extended.py  test_config_db_connection.py  test_data_loader.py  test_format_styles.py  test_integration.py  test_paste_highlighting.py  test_plugin_system.py  test_queries_improvements.py  test_repositories.py  test_right_click_menu.py  test_sql_features.py  test_sql_formatter.py  test_sql_splitter.py  test_theme_patch.py  test_tree_item_builders.py  test_ui_queries_manager.py  test_virtual_scrolling.py
(+285 files in other folders)
