[project]
name = "data-forge-studio"
version = "0.2.0"
description = "Multi-database query manager with data transformation and project organization"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Lestat2Lioncourt" }
]
license = { text = "MIT" }
keywords = ["database", "sql", "query-manager", "data-transformation", "gui", "formatter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database :: Front-Ends",
]

dependencies = [
    "colorama>=0.4.6",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pyodbc>=5.3.0",
    "sqlalchemy>=2.0.44",
    "sqlparse>=0.5.4",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

# Entry points commented out - use run.py or cli.py instead
# [project.scripts]
# data-forge-studio = "src.main:main"
# data-forge-studio-cli = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
